--- a/app/src/main/res/layout/layout_banner_melodie.xml
+++ b/app/src/main/res/layout/layout_banner_melodie.xml
@@ -37,6 +37,7 @@
         android:ellipsize="marquee"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:freezesText="true"
         android:marqueeRepeatLimit="marquee_forever"
         android:maxLines="1"
         android:scrollHorizontally="true"
@@ -64,6 +65,13 @@
         android:layout_marginStart="10dp"
         android:layout_toStartOf="@+id/banner_melodie_imageViewButonEdit"
         android:layout_toEndOf="@+id/banner_melodie_imageViewPlay"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:freezesText="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
         android:text="Număr redări"
         android:textColor="@color/text"
         android:textSize="@dimen/text_mic" />
@@ -86,6 +94,13 @@
         android:layout_marginStart="10dp"
         android:layout_toStartOf="@+id/banner_melodie_imageViewButonEdit"
         android:layout_toEndOf="@id/banner_melodie_imageViewNotaMuzicala"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:freezesText="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
         android:text="Gen muzical"
         android:textColor="@color/text"
         android:textSize="@dimen/text_mic" />
