--- a/app/src/main/res/layout/fragment_solicitari_acceptate.xml
+++ b/app/src/main/res/layout/fragment_solicitari_acceptate.xml
@@ -30,8 +30,7 @@
         android:id="@+id/solicitari_acceptate_lottieAnimationView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/lottie_music_girl" />
